--- a/DrEmergencias.csproj
+++ b/DrEmergencias.csproj
@@ -13,6 +13,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Radzen.Blazor" Version="4.7.0" />
   </ItemGroup>
 
 </Project>
