--- a/DrEmergencias.csproj
+++ b/DrEmergencias.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,6 +7,29 @@
   </PropertyGroup>
 
   <ItemGroup>
+    
+    
+    
+    
+	  
+    
+    
+    
+    
+    <PackageReference Include="iTextSharp" Version="5.5.13.3" />
+    
+    
+    
+    
+	  
+    
+    
+    
+    
+    
+    
+    
+    
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityframeworkCore.sqlserver" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityframeworkCore.tools" Version="7.0.2">
