Seguimiento de compras.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConStr": "workstation id=DrEmergencias.mssql.somee.com;packet size=4096;user id=Sunxoul_SQLLogin_1;pwd=fg9awxo6ox;data source=DrEmergencias.mssql.somee.com;persist security info=False;initial catalog=DrEmergencias;TrustServerCertificate=true"
+    "ConStr": "Data Source = DataBase//DrEmergencias.db"
   },
   "Logging": {
     "LogLevel": {
